@@ -5,7 +5,7 @@ import { apps } from "./app";
 export const signups = pgTable("signups", {
     id: uuid().primaryKey().defaultRandom(),
     name: varchar({ length: 255 }),
-    email: varchar({ length: 255 }).unique().notNull(),
+    email: varchar({ length: 255 }).notNull(),
     ownerId: uuid('owner_id').notNull().references(() => user.id),
     appId: uuid('app_id').notNull().references(() => apps.id),
     createdAt: timestamp('created_at').$defaultFn(() => new Date()).notNull(),
